--- a/web/package.json
+++ b/web/package.json
@@ -25,18 +25,22 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@vue/test-utils": "^1.3.0",
+    "autoprefixer": "^10.4.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.4",
+    "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.50.0",
     "sass-loader": "^10.2.1",
+    "tailwindcss": "^3.0.24",
     "ts-jest": "^27.1.1",
     "vue-jest": "^3.0.4"
   }
