--- a/web/package.json
+++ b/web/package.json
@@ -14,20 +14,30 @@
   },
   "dependencies": {
     "@chakra-ui/nuxt": "^0.4.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/emotion": "^0.1.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "secure-ls": "^1.2.6",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@vue/test-utils": "^1.3.0",
     "autoprefixer": "^10.4.4",
     "babel-core": "7.0.0-bridge.0",
