--- a/web/package.json
+++ b/web/package.json
@@ -21,12 +21,15 @@
     "@nuxtjs/emotion": "^0.1.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
+    "devextreme": "21.2.7",
+    "devextreme-vue": "21.2.7",
     "moment": "^2.29.3",
     "nuxt": "^2.15.8",
     "secure-ls": "^1.2.6",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "vue-sweetalert2": "^5.0.5",
     "vue-template-compiler": "^2.6.14",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3",
