--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "secure-ls": "^1.2.6",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-server-renderer": "^2.6.14",
     "vue-sweetalert2": "^5.0.5",
     "vue-template-compiler": "^2.6.14",
