--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/emotion": "^0.1.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@types/google.maps": "^3.49.1",
+    "animate.css": "^4.1.1",
     "core-js": "^3.19.3",
     "devextreme": "21.2.7",
     "devextreme-vue": "21.2.7",
@@ -33,6 +34,7 @@
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-select": "^3.18.3",
     "vue-server-renderer": "^2.6.14",
     "vue-sweetalert2": "^5.0.5",
     "vue-template-compiler": "^2.6.14",
@@ -48,6 +50,7 @@
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/fontawesome": "^1.1.2",
+    "@types/vue-select": "^3.16.0",
     "@vue/test-utils": "^1.3.0",
     "autoprefixer": "^10.4.4",
     "babel-core": "7.0.0-bridge.0",
